Update Calculators/Web Based Calculators/FoodQuotientCalc.html

--- a/Calculators/Web Based Calculators/FoodQuotientCalc.html
+++ b/Calculators/Web Based Calculators/FoodQuotientCalc.html
@@ -95,7 +95,7 @@ button {
         <input type="text" id="Protein" name="user_Protein" value="162.0"> grams
     </div>
     <div>
-        <label for="Alcohol">Protein :</label>
+        <label for="Alcohol">Alcohol :</label>
         <input type="text" id="Alcohol" name="user_Alcohol" value="0.0"> grams
     </div>
 <div class="button">
@@ -104,8 +104,15 @@ button {
 </form>
 <i>Scroll down for results after pressing Calculate</i><p/>
 <hr/>
-<h2>Food Quality</h2>
+<h2>Food Quotient</h2>
 <p id="results"></p>
+<a href="https://en.wikipedia.org/wiki/Respiratory_quotient" target="_blank" rel="noopener">Respiratory quotient</a><br/>
+<ul>
+<li>RQ of 0.7 = Fat being oxidized</li>
+<li>RQ of 0.8 = Protein being oxidized</li>
+<li>RQ of 0.85 = Equal amount of fat and carbohydrates being oxidized</li>
+<li>RQ of 1.0 = Carbohydrates being oxidized</li>
+</ul>
 <h2>Disclaimer</h2>
 Use this information at your own risk and with the advice of your medical professional. 
 We are not doctors nor do we pretend to be one on the Internet.
